[package]
name = "simulation_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/ZGako/WGL_repo_2024/", branch = "trait-object-compatibility"}
common_structs = { git = "https://github.com/rusty-drone-2024/common-structs.git" }

crossbeam-channel = ">=0.5.13"