[package]
name = "simulation_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"]}
common_structs = { git = "https://github.com/rusty-drone-2024/common-structs.git" }
network_initializer ={ git = "https://github.com/rusty-drone-2024/network-initializer.git" }

crossbeam-channel = ">=0.5.13"
bevy = "0.15.1"
rand = "0.8.4"
force_graph = "0.3.2"
petgraph = "0.5.1"
bevy_egui = "0.32.0"
bevy-inspector-egui = "0.29.1"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
