[package]
name = "simulation_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
common_structs = { git = "https://github.com/rusty-drone-2024/common-structs.git" }
network_initializer = { git = "https://github.com/rusty-drone-2024/network-initializer.git" }


bevy = { version =  "0.15.1", default-features = false, features = ["multi_threaded", "bevy_winit", "wayland", "bevy_sprite", "bevy_text", "bevy_ui", "default_font", "png", "bevy_audio","mp3"] }
bevy_egui = { version = "0.32.0", default-features = true }
bevy-trait-query = "0.7.0"

crossbeam-channel = ">=0.5.13"
rand = ">=0.8.5"
petgraph = { version = "0.7.1" }
force_graph ={ path = "./force-graph-rs" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
